--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -45,7 +45,7 @@
         <div class="row">
             <div class="col">
                 <div class="alert alert-success mt-3" role="alert">
-                    You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!.
+                    You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-borderless">
