--- a/Ocean2Ocean.Mvc/Views/Home/ESRI.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/ESRI.cshtml
@@ -18,7 +18,7 @@
 </style>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4 d-none d-sm-block">
+        <div class="col-12 col-md-4">
             <div class="container">
                 <div class="legend pl-3">
                     <h1 class="display-4 pt-3">
@@ -45,7 +45,6 @@
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Journey Name</label>
                                     <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey" value="@Model?.JourneyName" readonly>
-                                    @*<small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>*@
                                 </div>
                             }
                             else
@@ -72,11 +71,6 @@
                                     <input type="number" id="stepsInRoute" name="stepsInRoute" hidden />
                                 </div>
                             </div>
-                            @*<div class="col">
-                                <label for="dailyGoal">⭐ Daily Group Step Goal</label>
-                                <input type="number" name="steps" class="form-control" id="dailyGoal" value="5000" readonly>
-                                <small id="dailyGoalHelp" class="form-text text-muted">Meet this goal to win a star!</small>
-                            </div>*@
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" asp-action="AddSteps" asp-route-journeyName="@Model?.JourneyName">🚀 Submit</button>
@@ -94,7 +88,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="pl-3">
+                <div class="pl-3 pb-3">
                     <div id="pageId" hidden></div>
                     <hr />
                     <div class="card">
@@ -110,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-12 col-md-8">
             <div id="viewDiv"></div>
         </div>
     </div>
@@ -126,13 +120,6 @@
 
         var map = new Map({
             basemap: "topo-vector"
-        });
-
-        var view = new MapView({
-            container: "viewDiv",
-            map: map,
-            center: [-97, 40],
-            zoom: 4
         });
 
         var graphicsLayer = new GraphicsLayer();
@@ -198,6 +185,13 @@
         })
 
         graphicsLayer.add(polylineGraphicRemaining);
+
+        var view = new MapView({
+            container: "viewDiv",
+            map: map,
+            center: point,
+            zoom: 12
+        });
 
     });
 </script>
