--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -3,98 +3,126 @@
     ViewData["Title"] = "Add Steps";
 }
 
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-<div class="container">
-    @*<div class="row">
-            <div class="col">
-                <h1 class="display-4 pt-3">
-                    Add Your Steps
-                </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Work Email Address</label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" value="@Model?.FirstOrDefault()?.Email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Steps Taken</label>
-                        <input type="number" name="steps" class="form-control" id="exampleInputPassword1" placeholder="1337">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                        <a asp-action="Index" class="btn btn-info btn-lg">Return to the Map</a>
-                    </div>
-                </form>
-            </div>
-        </div>*@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+<script>
     @{
-        int dailyGoal = 5000;
+        var graphData = Model?.Take(14).ToArray();
+        var commaString = string.Empty;
+        foreach (var ingest in graphData)
+        {
+            commaString += $"{ingest.Steps}, ";
+        }
+        @Html.Raw($"var numbersRetrivedArr = [{commaString.Substring(0, commaString.Length - 2)}];");
+      }
+
+    @{
+                commaString = string.Empty;
+        foreach (var ingest in graphData)
+        {
+            commaString += $"\"{ingest.Created.ToShortDateString()}\", ";
+        }
+        @Html.Raw($"var dateArr = [{commaString.Substring(0, commaString.Length - 2)}];");
+
+    }
+</script>
+<div class="container">
+    @{
         if (Model != null && Model.Any())
         {
-        <div class="row">
-            <div class="col">
-                <h1 class="display-4 pt-3">
-                    Steps Submitted for @Model?.FirstOrDefault()?.Email
-                </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="alert alert-success mt-3" role="alert">
-                    You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
+            <div class="row">
+                <div class="col">
+                    <h1 class="display-4 pt-3">
+                        Steps Submitted for @Model?.FirstOrDefault()?.Email
+                    </h1>
                 </div>
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover table-borderless">
-                        <tbody>
-                            @{
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="alert alert-success mt-3" role="alert">
+                        You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
+                    </div>
+                    <canvas id="myChart" width="400" height="200" class="pb-4"></canvas>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover table-borderless">
+                            <tbody>
+                                @{
                                     int stars = 0;
                                     foreach (var entry in Model)
                                     {
-                                <tr>
-                                    <td>
-                                        @{
-                                            string formattedSteps = $"{entry?.Steps.ToString("N0")} Steps";
-                                        }
-                                        @formattedSteps
-                                    </td>
-                                    <td>
-                                        @entry?.Created
-                                    </td>
-                                    <td>
-                                        <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-entryId="@entry?.EntryId">
-                                            <button type="submit" class="btn btn-danger">
-                                                ❌ Delete
-                                            </button>
-                                        </form>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-primary" href="/@entry.JourneyName">
-                                            🗺️ View @entry?.JourneyName
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-success" href="/Home/Leaderboard/@entry?.JourneyName">🌠 Leaderboard</a>
-                                    </td>
-                                </tr>
+                                        <tr>
+                                            <td>
+                                                @{
+                                                    string formattedSteps = $"{entry?.Steps.ToString("N0")} Steps";
+                                                }
+                                                @formattedSteps
+                                            </td>
+                                            <td>
+                                                @entry?.Created
+                                            </td>
+                                            <td>
+                                                <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-entryId="@entry?.EntryId">
+                                                    <button type="submit" class="btn btn-danger">
+                                                        ❌ Delete
+                                                    </button>
+                                                </form>
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-primary" href="/@entry.JourneyName">
+                                                    🗺️ View @entry?.JourneyName
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-success" href="/Home/Leaderboard/@entry?.JourneyName">🌠 Leaderboard</a>
+                                            </td>
+                                        </tr>
                                     }
-                            }
-                        </tbody>
-                    </table>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
         }
         else
         {
-        <div class="pt-3">
-            <div class="alert alert-warning" role="alert">
-                No results found.
+            <div class="pt-3">
+                <div class="alert alert-warning" role="alert">
+                    No results found.
+                </div>
             </div>
-        </div>
         }
     }
 </div>
+<script>
+    var ctx = document.getElementById('myChart');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: dateArr,
+            datasets: [{
+                label: 'Steps Recorded',
+                data: numbersRetrivedArr,
+                backgroundColor: [
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: false
+                    }
+                }]
+            }
+        }
+    });
+</script>
