--- a/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
@@ -2,7 +2,28 @@
 @{
     ViewData["Title"] = "Leaderboard";
 }
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+<script>
+    @{
+        var graphData = Model?.SumByDay.Take(14).ToArray();
+        var commaString = string.Empty;
+        foreach (var ingest in graphData)
+        {
+            commaString += $"{ingest.TotalSteps}, ";
+        }
+        @Html.Raw($"var numbersRetrivedArr = [{commaString.Substring(0, commaString.Length - 2)}];");
+      }
 
+    @{
+                commaString = string.Empty;
+        foreach (var ingest in graphData)
+        {
+            commaString += $"\"{ingest.SummedDate.ToShortDateString()}\", ";
+        }
+        @Html.Raw($"var dateArr = [{commaString.Substring(0, commaString.Length - 2)}];");
+
+    }
+</script>
 <div class="container">
     @{
         int dailyGoal = 5000;
@@ -173,6 +194,7 @@
                     <div class="alert alert-success mt-3" role="alert">
                         @Model?.JourneyRankings.FirstOrDefault()?.JourneyName has made it <strong>@Model?.JourneyRankings.Sum(x => x.TotalSteps).ToString("N0")</strong> steps into its Journey so far!
                     </div>
+                    <canvas id="myChart" width="400" height="200" class="pb-4"></canvas>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover table-borderless">
                             <tbody>
@@ -249,3 +271,36 @@
         🗺️ Return to the Map
     </a>
 </div>
+<script>
+    var ctx = document.getElementById('myChart');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: dateArr,
+            datasets: [{
+                label: 'Steps Recorded',
+                data: numbersRetrivedArr,
+                backgroundColor: [
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: false
+                    }
+                }]
+            }
+        }
+    });
+</script>
