--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="display-4 pt-3">
-                        Steps Submitted for @Model?.FirstOrDefault()?.Email
+                        Steps Submitted for @Model?.FirstOrDefault()?.Nickname
                     </h1>
                 </div>
             </div>
@@ -46,7 +46,6 @@
                         <table class="table table-striped table-hover table-borderless">
                             <tbody>
                                 @{
-                                    int stars = 0;
                                     foreach (var entry in Model)
                                     {
                                         <tr>
@@ -60,7 +59,7 @@
                                                 @entry?.Created
                                             </td>
                                             <td>
-                                                <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-entryId="@entry?.EntryId">
+                                                <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-stepId="@entry?.StepId">
                                                     <button type="submit" class="btn btn-danger">
                                                         ❌ Delete
                                                     </button>
