--- a/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
@@ -60,7 +60,7 @@
                                                     <strong>@postion 🏆</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
@@ -77,7 +77,7 @@
                                                     <strong>@postion 🐌</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
@@ -94,7 +94,7 @@
                                                     <strong>@postion</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
@@ -213,7 +213,7 @@
                                                     <strong>@postion 🏆</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i].TotalSteps Steps
@@ -230,7 +230,7 @@
                                                     <strong>@postion 🐌</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i].TotalSteps Steps
@@ -247,7 +247,7 @@
                                                     <strong>@postion</strong>
                                                 </td>
                                                 <td>
-                                                    @names[i].Email
+                                                    @names[i].Nickname
                                                 </td>
                                                 <td>
                                                     @names[i].TotalSteps Steps
