--- a/Ocean2Ocean.Mvc/Views/Home/SubmittedSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/SubmittedSteps.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col">
             <h1 class="display-4 pt-3">
-                Steps Submitted for @Model?.FirstOrDefault()?.Email
+                Steps Submitted for @Model?.FirstOrDefault()?.Nickname
             </h1>
         </div>
     </div>
