--- a/Ocean2Ocean.Mvc/Views/Home/SearchJourneys.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/SearchJourneys.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h4 class="display-4 pb-3">
+            <h4 class="display-4 pb-3 pt-3">
                 Find Your Journey
             </h4>
             <form method="get">
@@ -14,6 +14,7 @@
                     <input type="text" class="form-control" name="journeyName" value="@Model?.Query" placeholder="What's the name of the Journey?" aria-label="Journey Name" aria-describedby="button-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
+                        <a class="btn btn-info" href="/Journeys">Reset</a>
                     </div>
                 </div>
             </form>
@@ -22,42 +23,32 @@
     @{
         if (Model != null && Model.Journeys != null && Model.Journeys.Any())
         {
-            <div class="table-responsive">
-                <table class="table table-striped table-hover table-borderless">
-                    <thead>
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Date Created
-                            </th>
-                            <th>
-
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @{
-                            foreach (var journey in Model?.Journeys)
-                            {
-                                <tr>
-                                    <td class="h2">
+            <div class="row">
+                @{
+                    foreach (var journey in Model?.Journeys)
+                    {
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
+                            <div class="card">
+                                <img class="card-img-top" src="@journey?.ImagePath" />
+                                @*/images/scaled/GRP2615-front-400.jpg*@
+                                <div class="card-body">
+                                    <h5 class="card-title">
                                         @journey.JourneyName
-                                    </td>
-                                    <td>
-                                        @journey.Created
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-primary" href="/@journey.JourneyName">
-                                            🗺️ View
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        }
-                    </tbody>
-                </table>
+                                    </h5>
+                                    <p class="card-text">
+                                        @journey.Bio
+                                    </p>
+                                    <a class="btn btn-primary" href="/@journey.JourneyName">
+                                        🗺️ View
+                                    </a>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    Created on @journey.Created.ToShortDateString()
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
             </div>
         }
         else
