Got the images working on the Journeys page.

--- a/Ocean2Ocean.Mvc/Views/Home/SearchJourneys.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/SearchJourneys.cshtml
@@ -15,6 +15,9 @@
                     <div class="input-group-append">
                         <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
                         <a class="btn btn-info" href="/Journeys">Reset</a>
+                        <a class="btn btn-danger" href="#">
+                            New
+                        </a>
                     </div>
                 </div>
             </form>
@@ -30,7 +33,6 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
                             <div class="card">
                                 <img class="card-img-top" src="@journey?.ImagePath" />
-                                @*/images/scaled/GRP2615-front-400.jpg*@
                                 <div class="card-body">
                                     <h5 class="card-title">
                                         @journey.JourneyName
