Got the journey creation process working.

--- a/Ocean2Ocean.Mvc/Views/Journeys/Journeys.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Journeys/Journeys.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col">
             <h4 class="display-4 pb-3 pt-3">
-                Find Your Journey
+                🔍 Find Your Journey
             </h4>
             <form method="get">
                 <div class="input-group pb-4">
@@ -15,7 +15,7 @@
                     <div class="input-group-append">
                         <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
                         <a class="btn btn-info" href="/Journeys">Reset</a>
-                        <a class="btn btn-danger" href="#">
+                        <a class="btn btn-danger" href="/Journeys/Add">
                             New
                         </a>
                     </div>
