Added the ability to create Teams and search for them in support of issue #12.

--- a/Ocean2Ocean.Mvc/Views/Teams/Teams.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Teams/Teams.cshtml
@@ -1,21 +1,21 @@
-﻿@model Ocean2Ocean.DataAccess.JourneysSearchResult
+﻿@model Ocean2Ocean.DataAccess.TeamsSearchResult
 @{
-    ViewData["Title"] = "Journeys";
+    ViewData["Title"] = "Teams";
 }
 
 <div class="container">
     <div class="row">
         <div class="col">
             <h4 class="display-4 pb-3 pt-3">
-                🔍 Find Your Journey
+                🔍 Find Your Team
             </h4>
             <form method="get">
                 <div class="input-group pb-4">
-                    <input type="text" class="form-control" name="journeyName" value="@Model?.Query" placeholder="What's the name of your Journey?" aria-label="Journey Name" aria-describedby="button-addon2">
+                    <input type="text" class="form-control" name="teamName" value="@Model?.Query" placeholder="What's the name of your Team?" aria-label="Team Name" aria-describedby="button-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
-                        <a class="btn btn-info" href="/Journeys">Reset</a>
-                        <a class="btn btn-danger" href="/Journeys/Add">
+                        <a class="btn btn-info" href="/Teams">Reset</a>
+                        <a class="btn btn-danger" href="/Teams/Add">
                             New
                         </a>
                     </div>
@@ -24,28 +24,29 @@
         </div>
     </div>
     @{
-        if (Model != null && Model.Journeys != null && Model.Journeys.Any())
+        if (Model != null && Model.Teams != null && Model.Teams.Any())
         {
             <div class="row">
                 @{
-                    foreach (var journey in Model?.Journeys)
+                    foreach (var team in Model?.Teams)
                     {
                         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
                             <div class="card">
-                                <img class="card-img-top" src="@journey?.ImagePath" />
+                                @*<img class="card-img-top" src="@journey?.ImagePath" />*@
                                 <div class="card-body">
                                     <h5 class="card-title">
-                                        @journey.JourneyName
+                                        @team.TeamName
                                     </h5>
+                                    <a href="@team.TeamWebsite">@team.TeamWebsite</a>
                                     <p class="card-text">
-                                        @journey.Bio
+                                        @team.Bio
                                     </p>
-                                    <a class="btn btn-primary btn-block" href="/@journey.JourneyName">
-                                        🗺️ View
-                                    </a>
+                                    @*<a class="btn btn-primary btn-block" href="/@team.TeamName" target="_blank noreferrer">
+                                            🗺️ View
+                                        </a>*@
                                 </div>
                                 <div class="card-footer text-muted">
-                                    Created on @journey.Created.ToShortDateString()
+                                    Created on @team.Created.ToShortDateString()
                                 </div>
                             </div>
                         </div>
