--- a/Ocean2Ocean.Mvc/Views/Home/ESRI.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/ESRI.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ocean2Ocean.DataAccess.Journey
+﻿@model Ocean2Ocean.DataAccess.Map
 @{
     ViewData["Title"] = "Journey";
 }
@@ -33,59 +33,90 @@
                     @{
                         if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
                         {
-                        <div class="alert alert-danger" role="alert">
-                            @Model.ErrorMessage
-                        </div>
-                        <a class="btn btn-success btn-block" href="/Home/Journeys">🔍 Find Your Journey</a>
+                            <div class="alert alert-danger" role="alert">
+                                @Model.ErrorMessage
+                            </div>
+                            <a class="btn btn-success btn-block" href="/Home/Journeys">🔍 Find Your Journey</a>
                         }
                     }
                     <form method="get" autocomplete="on">
                         @{
-                            if (!(string.IsNullOrWhiteSpace(Model.JourneyName)))
+                            if (!(string.IsNullOrWhiteSpace(Model.Journey.JourneyName)))
                             {
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Journey Name</label>
-                                <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey" value="@Model?.JourneyName" readonly>
-                            </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Journey Name</label>
+                                    <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey" value="@Model?.Journey?.JourneyName" readonly>
+                                </div>
                             }
                             else
                             {
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Journey Name</label>
-                                <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey (SE Walk Across America)" required>
-                                <small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>
-                            </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Journey Name</label>
+                                    <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey (SE Walk Across America)" required>
+                                    <small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>
+                                </div>
                             }
                         }
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Your Nickname</label>
-                            <input type="text" name="nickname" class="form-control" id="nickname" aria-describedby="nickname" placeholder="Enter a Nickname (or leave blank)" value="@Model?.Step?.Nickname">
-                            <small id="emailHelp" class="form-text text-muted">We never store personally identifying information.</small>
-                        </div>
+                        @{
+                            if (!(string.IsNullOrWhiteSpace(Model?.Team?.TeamName)))
+                            {
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Team Name</label>
+                                    <input type="text" name="teamName" class="form-control" id="teamName" aria-describedby="teamName" placeholder="Enter a Name for your Team" value="@Model?.Team?.TeamName" readonly>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Team Name</label>
+                                    <input type="text" name="teamName" class="form-control" id="teamName" aria-describedby="teamName" placeholder="Enter a Name for your Team">
+                                    <small id="emailHelp" class="form-text text-muted">What does your team call itself?</small>
+                                </div>
+                            }
+                        }
+                        @{
+                            if (!(string.IsNullOrWhiteSpace(Model?.Nickname?.Name)))
+                            {
+                                <div class="form-group">
+                                    <label for="nickname">Your Nickname</label>
+                                    <input type="text" name="nickname" class="form-control" id="nickname" aria-describedby="nickname" placeholder="Enter a Nickname (or leave blank)" value="@Model?.Nickname?.Name" readonly>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="form-group">
+                                    <label for="nickname">Your Nickname</label>
+                                    <input type="text" name="nickname" class="form-control" id="nickname" aria-describedby="nickname" placeholder="Enter a Nickname (or leave blank)">
+                                    <small id="emailHelp" class="form-text text-muted">We never store personally identifying information.</small>
+                                </div>
+                            }
+                        }
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">Your Steps</label>
-                                    <input type="number" name="steps" class="form-control" id="exampleInputPassword1" placeholder="0" value="@Model?.Step?.Steps" required>
-                                    <small id="emailHelp" class="form-text text-muted">1 Mile is about 2000 steps.</small>
+                                    <label for="steps">Your Steps</label>
+                                    <input type="number" name="steps" class="form-control" id="steps" placeholder="0" required>
+                                    <small id="stepsHelp" class="form-text text-muted">1 Mile is about 2000 steps.</small>
+                                    @{
+                                        // These hidden fields enable us to do server-side input validation of the step count without processing geometry on the server or tracking the step count in the route.
+                                    }
                                     <input type="number" id="stepsTaken" name="stepsTaken" hidden />
                                     <input type="number" id="stepsInRoute" name="stepsInRoute" hidden />
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" asp-action="AddSteps" asp-route-journeyName="@Model?.JourneyName">🚀 Submit</button>
+                            <button type="submit" class="btn btn-primary btn-block" asp-action="AddSteps" asp-route-journeyName="@Model?.Journey?.JourneyName">🚀 Submit</button>
                             @{
-                                if (!(string.IsNullOrWhiteSpace(Model.JourneyName)))
+                                if (!(string.IsNullOrWhiteSpace(Model.Journey.JourneyName)))
                                 {
-                                <a class="btn btn-success" href="/Home/Leaderboard/@Model?.JourneyName">🌠 Leaderboard</a>
+                                    <a class="btn btn-success btn-block" href="/Home/Leaderboard/@Model?.Journey?.JourneyName">🌠 Leaderboard</a>
                                 }
                                 else
                                 {
-                                <a class="btn btn-success disabled" href="/Home/Leaderboard/@Model?.JourneyName">🌠 Leaderboard</a>
+                                    <a class="btn btn-success disabled btn-block" href="/Home/Leaderboard/@Model?.Journey?.JourneyName">🌠 Leaderboard</a>
                                 }
                             }
-                            <a class="btn btn-info" href="https://github.com/uncheckederror/Ocean2Ocean" target="_blank">👓 Github</a>
                         </div>
                     </form>
                 </div>
