--- a/Ocean2Ocean.Mvc/Views/Nicknames/Nicknames.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Nicknames/Nicknames.cshtml
@@ -60,4 +60,13 @@
             </div>
         }
     }
+    <div class="row">
+        <div class="col">
+            <div class="pt-3">
+                <a href="/" class="text-decoration-none btn btn-outline-info">
+                    🌊 Ocean To Ocean
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
